--- a/chess_detection_v1.ipynb
+++ b/chess_detection_v1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6IEy2sSlsmL1i2jZ4NP72",
+      "authorship_tag": "ABX9TyNHrFRj7Qp5BFrLkF57q45c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -470,6 +470,15 @@
       ],
       "metadata": {
         "id": "DvMwrmYsdoAs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tabah kodingan"
+      ],
+      "metadata": {
+        "id": "Jkt_ijDtBiqT"
       }
     }
   ]
